@startuml

class UnderlinePen
class MessageBox
interface Product
class Manager
Product <|-- UnderlinePen
Product <|-- MessageBox
Product <--Manager
class Manager{
showcase
register()
create()
}
interface Product{
use()
createClone()
}
class UnderlinePen{
ulchar
use()
createClone()
}
class MessageBox{
decochar
use()
createClone()

}
@enduml